--- a/2. Pass the Message Project/index.html
+++ b/2. Pass the Message Project/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Message You Would Like To Pass</title>
 </head>
 <body>
     
+    <section class="message-card">
+        <h2>Message You Would Like To Pass</h2>
+        <input type="text">
+        <button>Submit</button>
+        <h2>Last message delivered</h2>
+        <p>text</p>
+    </section>
+
+<script src="./javascript/passMessage.js"></script>
 </body>
 </html>
