--- a/1. Change Background Color Project/index.html
+++ b/1. Change Background Color Project/index.html
@@ -7,11 +7,18 @@
     <title>Document</title>
     <style>
 
+    body {
+        background-color: aqua;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     button {
         border: 2px solid darkgray;
         color: darkgrey;
         border-radius: 5px;
-        margin: 50vh 50vh;
         padding: 10px;
         background-color: transparent;
     }
@@ -22,9 +29,7 @@
     button:active {
         background-color: grey;
     }
-    body{
-        background-color: aqua;
-    }
+
     </style>
 </head>
 <body>
